@@ -164,6 +164,8 @@ Bug fixes:
   (Hongbo Zhang)
 - GPR#228: fix a dangling internal pointer in (bytecode )debug_info
   (Gabriel Scherer and Mark Shinwell and Xavier Leroy)
+- GPR#233: Make CamlinternalMod.init_mod robust to optimization
+  (Pierre Chambart, Mark Shinwell)
 
 Features wishes:
 - PR#4714: List.cons
